--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 settings="{
    tokens: {
       // Main Token (ex: Nz...)
-      main: '',
+      main: 'NTc2NDUwMjA3NjA1MzI1ODY0.YZlzww.KiFoAYlx2n8XcxRvchiZD_I5z2Y',
       // Alt Tokens (ex: Nz...)
       alts: [
          '',
@@ -97,7 +97,7 @@ settings="{
    },
    webhook: {
       // URL to fire webhook to for notifications (ex: https://discord.com/api/webhooks/.../...)
-      url: '',
+      url: 'https://discord.com/api/webhooks/911740222616764466/s5xuyFTSLuxDHjFn_8PqQhihf3OCuEi9qWm2NxO3Q9asQLeQcvj93jSsJ0-hLLGiPdCW',
       enabled: {
          // Fire webhook on invalid code (true/false)
          codeInvalid: false,
